--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,14 +9,8 @@
     height: 100px;
     width: 100px;
     text-align: center;
-    font: 200 60px helvetica neue, arial;
+    font: bolder 3em arial;
     cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
 
 .board tr:first-child td {
@@ -33,4 +27,12 @@
 
 .board tr td:last-child {
     border-right: none;
+}
+
+.board td.X {
+    color: red;
+}
+
+.board td.O {
+    color: blue;
 }
