--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,6 +1,19 @@
-h1, h3{
-    text-align: center;
+html, body{
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: darkgray;
 }
+
+h1{
+    text-align: center;
+    color: #3498db;
+}
+
+h3{
+    text-align: center;
+    text-shadow: 2px 2px #111;
+}
+
 .board table {
     border-spacing: 0px;
     border-collapse: separate;
@@ -12,32 +25,19 @@ h1, h3{
     height: 100px;
     width: 100px;
     text-align: center;
-    font: bolder 3em arial;
+    font-weight: bolder;
+    font-size: 3em;
     cursor: pointer;
 }
 
-.board tr:first-child td {
-    border-top: none
-}
-
-.board tr:last-child td {
-    border-bottom: none
-}
-
-.board tr td:first-child {
-    border-left: none;
-}
-
-.board tr td:last-child {
-    border-right: none;
-}
-
 .board td.X, span.X {
-    color: red;
+    color: rgb(24, 171, 41);
+    font-weight: bolder;
 }
 
 .board td.O, span.O {
-    color: blue;
+    color: rgb(208, 39, 24);
+    font-weight: bolder;
 }
 
 .subtitles{
@@ -46,3 +46,31 @@ h1, h3{
     font-size: 1.2em;
     margin: 1em auto;
 }
+
+.select-style {
+    padding: 5px 8px;
+    width: 100px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.select-style select:focus {
+    outline: none;
+}
+
+.btn {
+    color: #ffffff;
+    background: #3498db;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    text-decoration: none;
+  }
+
+
+  
